plugins/comment_paragraph/public/style.css
#article .article-comments-list, 
#article .article-comments-list ul, 
#article .article-comments-list li {
	margin: 10px 0 10px 0;
}

div.article-comments-list-more{
  width: 100%;
  height: 30px;
  text-align: center;
  font-size: 20px;
  margin-bottom: 5px;
}

.popBox_comment_paragraph {
  position: absolute;
  z-index: 2;
  background: #cccccc;
  width: 60px;
  padding: 0.3em;
  position: absolute;border: 1px solid gray;
}

.span_comment_paragraph {
  color: red;
  font-weight: bold;
}

.commented-area {
  background-color: lightseagreen;
}

.comment_paragraph ::selection {
  background: lightseagreen; /* WebKit/Blink Browsers */
}

.comment_paragraph ::-moz-selection {
  background: lightseagreen; /* Gecko Browsers */
}

.comment_paragraph{
  padding: 0px;
 
}

.article-body{
  word-wrap: break-word;
}

.triangle-right {
   position:relative;
   padding:15px;
   margin:1em 0 3em;
   color:#fff;
   background:#075698; /* default background for browsers without gradient support */
   /* css3 */
   background:-webkit-gradient(linear, 0 0, 0 100%, from(#2e88c4), to(#075698));
   background:-moz-linear-gradient(#2e88c4, #075698);
   background:-o-linear-gradient(#2e88c4, #075698);
   background:linear-gradient(#2e88c4, #075698);
   -webkit-border-radius:10px;
   -moz-border-radius:10px;
   border-radius:10px;
}

.triangle-right:after {
    content: "";
    position: absolute;
    bottom: -20px;
    left: 50px;
    border-width: 20px 0 0 20px;
    border-style: solid;
    border-color: #075698 transparent;
    display: block;
    width: 0;
}

.triangle-border {
    position: relative;
    padding: 15px;
    margin: 1em 0 3em;
    border: 5px solid #5a8f00;
    color: #333;
    background: #fff;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
}

.comment-picture {width: 50px;}
.comment-text {display: inline-block;}
.comment-replies .comment-text {display: inline-block;}
.comment-from-owner .comment-created-at {
	display: block;
	width: 100%;}
.comment-replies .comment-text {display: block;}
#article .article-comment .comment-details h4 {display: none;}
#article .article-comments-list .comment-replies {padding-left: 20px;}
#comment_title{
   display: none;
}

div[class^='comments_list_toggle_paragraph_'] {
   border-style: solid;
   border-width: 1px;
   border-color: #ccc;
   padding: 5px;
   background-color: whitesmoke;
   width: 250px;
}

div[class^='comment-paragraph-loading-'] {
   background-color: whitesmoke;
   z-index: 99;
   right: -230px;
}

#content .comment-balloon div[class^='comment-wrapper-']{
	background: none;
}

.side-comment{
    z-index: 199;
}

.side-comments-counter {
	border: 1px solid #57ad68;
	padding: 3px;
	border-radius: 3px;
	color: #666;
}

#comments_list{
   display: none;    
}

.article-comment-inner {border-bottom: 1px solid #ddd;}

/*label[for="comment_title"]{
   display: none;
}*/

#article .comment-replies .article-comment{background: white; border: 0px; border-top: 1px solid #ddd;}

.comment-replies .comment-from-owner.comment-content {background: none;}

.article-comment .comment-details {margin-bottom: 10px;}

#content .comment-actions .menu-submenu ul {
    right: 100%;
    position: absolute;
}

